adding nav banner and card section with responsive style

--- a/index.html
+++ b/index.html
@@ -4,8 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kinds-Education</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="primary-font">
+        <nav>
+            <div class="logo">
+                <img src="assets/logo.png" alt="">
+                <h1>SCHOOL</h1>
+            </div>
+            <ul class="nav-list">
+                <li ><a href="" class="color1 ancor">Home</a></li>
+                <li ><a href="" class="color2 ancor">About</a></li>
+                <li ><a href="" class="color3 ancor">Facilities</a></li>
+                <li ><a href="" class="color4 ancor">Admission</a></li>
+            </ul>
+            <div class="buton">
+                <button class="btn-primary color-bright">Contact </button>
+                <img src="assets/image.png" alt="">
+            </div>
+            
+        </nav>
+    </header>
+    <main>
+        <section class="banner primary-font">
+            <div class="content">
+                <h1><span class="color1">Empowering</span>
+                    students from small age <span class="color2">towards vision</span></h1>
+                <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="btn-primary primary-font">Enroll Now</button>
+            </div>
+             <img src="assets/hero-kids.png" alt="">
+        </section>
+        <section class="card-section primary-font">
+            <h1>Standard Curriculum</h1>
+            <div class="all-cards">
+                <div class="card color2-grad">
+                    <img src="assets/kinder.png" alt="">
+                    <h2>
+                        Kinder (3-6) Years
+                    </h2>
+                    <p class="primary-description ">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient
+                    </p>
+                    <p class="color2">Read More</p>
+                </div>
+                <div class="card color1-grad">
+                    <img src="assets/kinder.png" alt="">
+                    <h2>
+                        Elementary School
+                    </h2>
+                    <p class="primary-description ">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient
+                    </p>
+                    <p class="color2">Read More</p>
+                </div>
+                <div class="card  color3-grad">
+                    <img src="assets/kinder.png" alt="">
+                    <h2>
+                        Middle (10-16) Years
+                    </h2>
+                    <p class="primary-description ">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient
+                    </p>
+                    <p class="color2">Read More</p>
+                </div>
+            </div>
+            <div class="key">
+                <div><</div>
+                <div>></div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
