--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kinds-Education</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <header class="primary-font">
+    <header class="primary-font header">
         <nav>
             <div class="logo">
                 <img src="assets/logo.png" alt="">
                 <h1>SCHOOL</h1>
             </div>
             <ul class="nav-list">
-                <li ><a href="" class="color1 ancor">Home</a></li>
-                <li ><a href="" class="color2 ancor">About</a></li>
-                <li ><a href="" class="color3 ancor">Facilities</a></li>
-                <li ><a href="" class="color4 ancor">Admission</a></li>
+                <li><a href="" class="color1 ancor">Home</a></li>
+                <li><a href="" class="color2 ancor">About</a></li>
+                <li><a href="" class="color3 ancor">Facilities</a></li>
+                <li><a href="" class="color4 ancor">Admission</a></li>
             </ul>
             <div class="buton">
                 <button class="btn-primary color-bright">Contact </button>
                 <img src="assets/image.png" alt="">
             </div>
-            
+
         </nav>
     </header>
     <main>
@@ -31,10 +33,11 @@
             <div class="content">
                 <h1><span class="color1">Empowering</span>
                     students from small age <span class="color2">towards vision</span></h1>
-                <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a
+                    Diverse and Dynamic World.</p>
                 <button class="btn-primary primary-font">Enroll Now</button>
             </div>
-             <img src="assets/hero-kids.png" alt="">
+            <img src="assets/hero-kids.png" alt="">
         </section>
         <section class="card-section primary-font">
             <h1>Standard Curriculum</h1>
@@ -59,7 +62,7 @@
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient
                     </p>
-                    <p class="color2">Read More</p>
+                    <p class="color1">Read More</p>
                 </div>
                 <div class="card  color3-grad">
                     <img src="assets/kinder.png" alt="">
@@ -70,17 +73,114 @@
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient
                     </p>
-                    <p class="color2">Read More</p>
+                    <p class="color4">Read More</p>
                 </div>
             </div>
             <div class="key">
-                <div><</div>
-                <div>></div>
-            </div>
+                <div>&#x22B2;</div>
+                <div>&#x22B3;</div>
         </section>
+
+        <section class="stories primary-font">
+            <h1>Our Stories</h1>
+            <div class="all-stories">
+                <div class="big-one">
+                    <div class="img-date">
+                        <img src="assets/story-1.png" alt="">
+                        <p class="date">November 19, 2019</p>
+                    </div>
+                    <div class="content">
+                        <h1 class="title">A fun toddler coloring training on
+                            classroom</h1>
+                        <p>Beautiful branding for changes by Never Now in Australia.
+                            changes is a platform for open discussion in an inclusive and
+                            collaborative environment, providing the...
+                        </p>
+                    </div>
+                </div>
+                <div class="all-small-cards">
+                    <div class="small-card">
+                        <div class="img-date">
+                            <img src="assets/story-2.png" alt="">
+                            <p class="date">November 19, 2019</p>
+                        </div>
+                        <div class="content">
+                            <h2>
+                                Find out if a school fits the
+                                family’s needs
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="small-card">
+                        <div class="img-date">
+                            <img src="assets/story-3.png" alt="">
+                            <p class="date  exp">November 19, 2019</p>
+                        </div>
+                        <div class="content">
+                            <h2>
+                                Summer math & literacy
+                                centres for kids
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="small-card hide">
+                        <div class="img-date">
+                            <img src="assets/story-3.png" alt="">
+                            <p class="date exp">November 19, 2019</p>
+                        </div>
+                        <div class="content">
+                            <h2>
+                                Summer math & literacy
+                                centres for kids
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="small-card hide">
+                        <div class="img-date">
+                            <img src="assets/story-3.png" alt="">
+                            <p class="date exp">November 19, 2019</p>
+                        </div>
+                        <div class="content">
+                            <h2>
+                                Summer math & literacy
+                                centres for kids
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="small-card">
+                        <div class="img-date">
+                            <img src="assets/story-4.png" alt="">
+                            <p class="date">September 10, 2019</p>
+                        </div>
+                        <div class="content">
+                            <h2>
+                                Classroom management
+                                techniques for new tutors
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="small-card">
+                        <div class="img-date">
+                            <img src="assets/story-5.png" alt="">
+                            <p class="date">July 19, 2019</p>
+                        </div>
+                        <div class="content">
+                            <h2>
+                                Conversation rhymes
+                                improve kids listening
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-primary">View All</button>
+        </section>
+
+
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
