--- a/index.html
+++ b/index.html
@@ -175,11 +175,35 @@
             </div>
             <button class="btn-primary">View All</button>
         </section>
-
-
     </main>
     <footer>
-
+        <section class="footer primary-font">
+            <div class="logo-about">
+                <div class="logo">
+                    <img src="assets/footer_logo.png" alt="">
+                    <h1>Kids<br>
+                        Education</h1>
+                </div>
+                <div class="description">
+                    Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+                </div>
+            </div>
+             <div class="all-link">
+                <h2 class="list-title">About School</h2>
+                <ul class="list">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Facilities</li>
+                    <li>Admission</li>
+                </ul>
+             </div>
+             <div class="all-icons">
+                <h2>Keep In Touch</h2>
+                <div class="icons">
+                    <img src="assets/fb.png" alt=""><img src="assets/dribble.png" alt=""><img src="assets/twitter.png" alt=""><img src="assets/google+.png" alt="">
+                </div>
+             </div>
+        </section>
     </footer>
 </body>
 
