--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
                     <h2>
                         Kinder (3-6) Years
                     </h2>
-                    <p class="primary-description ">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient
+                    <p class="primary-description ">Encouraging creativity and learning through fun, play-based activities. A nurturing space where young minds grow and thrive.
                     </p>
                     <p class="color2">Read More</p>
                 </div>
@@ -58,9 +56,7 @@
                     <h2>
                         Elementary School
                     </h2>
-                    <p class="primary-description ">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient
+                    <p class="primary-description ">Fostering curiosity and building strong academic foundations. Hands-on learning inspires creativity and critical thinking
                     </p>
                     <p class="color1">Read More</p>
                 </div>
@@ -69,9 +65,7 @@
                     <h2>
                         Middle (10-16) Years
                     </h2>
-                    <p class="primary-description ">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient
+                    <p class="primary-description ">Developing independence and skills for future success. A balanced program focused on academics and personal growth.
                     </p>
                     <p class="color4">Read More</p>
                 </div>
@@ -185,7 +179,7 @@
                         Education</h1>
                 </div>
                 <div class="description">
-                    Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+                    At Kids Education, we believe in creating a joyful and engaging learning environment. Our programs are designed to nurture creativity, curiosity, and lifelong learning, helping children grow into confident individuals
                 </div>
             </div>
              <div class="all-link">
