adding the final code and also marquee

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kinds-Education</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="assets/logo.png" type="image/icon type">
 </head>
 
 <body>
+    <!-- header -->
     <header class="primary-font header">
         <nav>
             <div class="logo">
@@ -29,16 +31,18 @@
         </nav>
     </header>
     <main>
+        <!-- banner -->
         <section class="banner primary-font">
             <div class="content">
-                <h1><span class="color1">Empowering</span>
-                    students from small age <span class="color2">towards vision</span></h1>
+                <h1><span class="color1">Empowering</span><br>
+                    students from small <br> age <span class="color2">towards vision</span></h1>
                 <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a
                     Diverse and Dynamic World.</p>
                 <button class="btn-primary primary-font">Enroll Now</button>
             </div>
             <img src="assets/hero-kids.png" alt="">
         </section>
+        <!-- Card section -->
         <section class="card-section primary-font">
             <h1>Standard Curriculum</h1>
             <div class="all-cards">
@@ -74,7 +78,7 @@
                 <div>&#x22B2;</div>
                 <div>&#x22B3;</div>
         </section>
-
+        <!-- story section -->
         <section class="stories primary-font">
             <h1>Our Stories</h1>
             <div class="all-stories">
@@ -170,6 +174,7 @@
             <button class="btn-primary">View All</button>
         </section>
     </main>
+    <!-- footer section -->
     <footer>
         <section class="footer primary-font">
             <div class="logo-about">
@@ -177,12 +182,12 @@
                     <img src="assets/footer_logo.png" alt="">
                     <h1>Kids<br>
                         Education</h1>
-                </div>
-                <div class="description">
-                    At Kids Education, we believe in creating a joyful and engaging learning environment. Our programs are designed to nurture creativity, curiosity, and lifelong learning, helping children grow into confident individuals
-                </div>
+                    </div>
+                    <div class="description">
+                        At Kids Education, we believe in creating a joyful and engaging learning environment. Our programs are designed to nurture creativity, curiosity, and lifelong learning, helping children grow into confident individuals
+                    </div>
             </div>
-             <div class="all-link">
+            <div class="all-link">
                 <h2 class="list-title">About School</h2>
                 <ul class="list">
                     <li>Home</li>
@@ -190,15 +195,24 @@
                     <li>Facilities</li>
                     <li>Admission</li>
                 </ul>
-             </div>
-             <div class="all-icons">
+            </div>
+            <div class="all-icons">
                 <h2>Keep In Touch</h2>
                 <div class="icons">
                     <img src="assets/fb.png" alt=""><img src="assets/dribble.png" alt=""><img src="assets/twitter.png" alt=""><img src="assets/google+.png" alt="">
                 </div>
-             </div>
+            </div>
         </section>
+        <!--using marquee tag -->
+        <marquee  behavior="" direction="left" scrollamount="10">
+            <div class="marqu">
+            <img src="assets/footer_logo.png" alt="">
+            <h1>Secure your child's bright future—Admissions open for 2025 at KidsEducation! Enroll now!</h1>
+            </div>
+        </marquee>
     </footer>
+    
+    
 </body>
 
 </html>
